[package]
name = "tokio-process"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/tokio-process"
homepage = "https://github.com/alexcrichton/tokio-process"
documentation = "https://docs.rs/tokio-process"
description = """
An implementation of an asynchronous process management backed futures.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "alexcrichton/tokio-process" }
appveyor = { repository = "alexcrichton/tokio-process" }

[dependencies]
#tokio-core = "0.1.2"
#futures = "0.1.7"
#mio = "0.6"
mio = { git = "https://github.com/carllerche/mio", default-features = false }
log = "0.3"
tokio-io = { git = 'https://github.com/alexcrichton/tokio-io' }

[dependencies.tokio-core]
git = "https://github.com/alexcrichton/tokio-core"
default-features = false
branch = "tio"
features = ["use_std"]

[dependencies.futures]
git = "https://github.com/alexcrichton/futures-rs"
branch = "close"
default-features = false
features = ["use_std"]

[dev-dependencies]
env_logger = { version = "0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
mio-named-pipes = { git = 'https://github.com/alexcrichton/mio-named-pipes', branch = 'tio' }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tokio-signal = { git = 'https://github.com/alexcrichton/tokio-signal', branch = 'tio' }
