[package]
name = "tokio-process"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "X.Y.Z" git tag.
version = "0.2.4"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Petkov <ivanppetkov@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/tokio-process"
homepage = "https://github.com/alexcrichton/tokio-process"
documentation = "https://docs.rs/tokio-process"
description = """
An implementation of an asynchronous process management backed futures.
"""
categories = ["asynchronous"]
edition = "2018"

[badges]
travis-ci = { repository = "alexcrichton/tokio-process" }
appveyor = { repository = "alexcrichton/tokio-process" }
codecov = { repository = "alexcrichton/tokio-process" }

[dependencies]
futures-util-preview = { version = "0.3.0-alpha.17" }
futures-preview = { version = "0.3.0-alpha.17" }
tokio-io = { version = "0.2.0", git = "https://github.com/tokio-rs/tokio", rev = "d0bb16192b70be73eb7be3f5f7d9979c91e0f9a8" }
tokio-reactor = { version = "0.2.0", git = "https://github.com/tokio-rs/tokio", rev = "d0bb16192b70be73eb7be3f5f7d9979c91e0f9a8" }

[dev-dependencies]
failure = "0.1"
log = "0.4"

[dependencies.tokio]
version = "0.2.0"
git = "https://github.com/tokio-rs/tokio"
rev = "d0bb16192b70be73eb7be3f5f7d9979c91e0f9a8"
features = ["io"]

[target.'cfg(windows)'.dependencies]
mio-named-pipes = "0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "handleapi",
  "winerror",
  "minwindef",
  "processthreadsapi",
  "synchapi",
  "threadpoollegacyapiset",
  "winbase",
  "winnt",
]

[target.'cfg(unix)'.dependencies]
crossbeam-queue = "0.1.2"
lazy_static = "1.3"
libc = "0.2"
log = "0.4"
mio = "0.6.5"
tokio-signal = { version = "0.3.0", git = "https://github.com/tokio-rs/tokio", rev = "d0bb16192b70be73eb7be3f5f7d9979c91e0f9a8" }
